# pyDLF

./: .clang-format  .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  coverage.yml  github-pages.yml  static-check.yml  tests.yml  unittest.yml
dlf/: __init__.py  device.py  tensor.py  types.py
docs/: _config.yml  api.md  examples.md  index.md  installation.md  tutorial.md  tutorials.md
docs/_layouts/: default.html
docs/assets/css/: style.scss
docs/assets/js/: main.js
include/data/: tensor.hpp
include/logger/: logger.h
include/ops/: flatten.h
include/tensor/: device.h  tensor.h  tensor.hpp  tensor_impl.hpp  tensor_view.h  tensor_view.hpp
include/utils/: logger.hpp
pydlf/: __init__.py  tensor.py
src/: CMakeLists.txt  dummy_code.cc  tensor.hpp
src/logger/: logger.cc  logger.cpp
src/python/: CMakeLists.txt  dlf.cpp  pydlf.cpp
src/tensor/: tensor.cpp  tensor_view.cpp
tests/: CMakeLists.txt  armadillo_test.cc  logger_test.cc  tensor_test.cc
tests/csrctests/: CMakeLists.txt  armadillo_test.cc  logger_test.cc  tensor_test.cc
tests/pytests/: pytest.ini  requirements.txt  test_tensor.py  test_tensor_advanced.py
